tests/expectations/compiler/option/bad_types_fail.out
Error [ETYC0372163]: Constants cannot have an optional type or a type that contains an optional
    --> compiler-test:19:1
     |
  19 | const BAD_CONST_ARRAY: [u8?; 2] = [1u8, 2i8]; // ERROR
     | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372117]: Expected type `u8?` but type `i8` was found.
    --> compiler-test:19:41
     |
  19 | const BAD_CONST_ARRAY: [u8?; 2] = [1u8, 2i8]; // ERROR
     |                                         ^^^
Error [ETYC0372117]: Expected type `u8?` but type `i8` was found.
    --> compiler-test:19:41
     |
  19 | const BAD_CONST_ARRAY: [u8?; 2] = [1u8, 2i8]; // ERROR
     |                                         ^^^
Error [ETYC0372117]: Expected type `u8` but type `u8?` was found.
    --> compiler-test:37:21
     |
  37 |         let b: u8 = a; // ERROR
     |                     ^
Error [ETYC0372158]: Found `none`, but the expected type `u8` is not an optional type.
    --> compiler-test:42:21
     |
  42 |         let a: u8 = none; // ERROR
     |                     ^^^^
Error [ETYC0372119]: Received different types `u8?` and `i8?` for the operation `==`.
    --> compiler-test:49:22
     |
  49 |         let result = a == b; // ERROR
     |                      ^^^^^^
     |
     = Make both operands the same type.
Error [ETYC0372119]: Received different types `u8?` and `u8` for the operation `==`.
    --> compiler-test:56:22
     |
  56 |         let result = a == b; // ERROR
     |                      ^^^^^^
     |
     = Make both operands the same type.
Error [ETYC0372117]: Expected type `u8?` but type `i8` was found.
    --> compiler-test:60:41
     |
  60 |         let arr: [u8?; 3] = [1u8, none, 3i8]; // ERROR
     |                                         ^^^
Error [ETYC0372117]: Expected type `u8?` but type `i8` was found.
    --> compiler-test:60:41
     |
  60 |         let arr: [u8?; 3] = [1u8, none, 3i8]; // ERROR
     |                                         ^^^
Error [ETYC0372119]: Received different types `bad_types.aleo/Foo` and `bad_types.aleo/Foo?` for the operation `==`.
    --> compiler-test:67:22
     |
  67 |         let result = a == b; // ERROR
     |                      ^^^^^^
     |
     = Make both operands the same type.
Error [ETYC0372117]: Expected type `[u8; 2]` but type `[u8?; 2]` was found.
    --> compiler-test:73:26
     |
  73 |         let b: [u8; 2] = a; // ERROR
     |                          ^
Error [ETYC0372117]: Expected type `bool` but type `bool?` was found.
    --> compiler-test:87:17
     |
  87 |         let x = condition ? 1u8 : 2u8; // ERROR
     |                 ^^^^^^^^^
Error [ETYC0372117]: Expected type `u8` but type `u8?` was found.
    --> compiler-test:94:31
     |
  94 |         let result = takes_u8(val); // ERROR
     |                               ^^^
Error [ETYC0372003]: Expected type `u8` but type `u8?` was found
    --> compiler-test:98:26
     |
  98 |         let result: u8 = returns_optional(); // ERROR
     |                          ^^^^^^^^^^^^^^^^^^
